@@ -397,15 +397,16 @@ module StateMachine
         # Creates a scope for finding records *with* a particular state or
         # states for the attribute
         def create_with_scope(name)
-          attribute = self.attribute
           define_scope(name, lambda {|values| {:conditions => {attribute => values}}})
         end
         
         # Creates a scope for finding records *without* a particular state or
         # states for the attribute
         def create_without_scope(name)
-          attribute = self.attribute
-          define_scope(name, lambda {|values| {:conditions => ["#{attribute} NOT IN (?)", values]}})
+          define_scope(name, lambda {|values|
+            connection = owner_class.connection
+            {:conditions => ["#{connection.quote_table_name(owner_class.table_name)}.#{connection.quote_column_name(attribute)} NOT IN (?)", values]}
+          })
         end
         
         # Runs a new database transaction, rolling back any changes by raising
