@@ -1,5 +1,7 @@
 == master
 
+* Fix without_{name} scopes not quoting columns in ActiveRecord [Jon Evans]
+* Fix without_{name} scopes not scoping columns to the table in ActiveRecord and Sequel [Jon Evans]
 * Fix custom state attributes not being marked properly as changed in ActiveRecord
 * Fix tracked attributes changes in ActiveRecord / DataMapper integrations not working correctly for non-loopbacks [Joe Lind]
 * Fix plural scope names being incorrect for DataMapper 0.9.4 - 0.9.6
